[gd_scene load_steps=2 format=3 uid="uid://cloled5m4tbf7"]

[ext_resource type="Script" uid="uid://brde1aqn7vrot" path="res://Scripts/Utility/language_selection.gd" id="1_ky16n"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ky16n")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 781.0
offset_top = 122.0
offset_right = 1205.0
offset_bottom = 205.0
theme_override_font_sizes/font_size = 60
text = "Scegli la lingua"

[node name="ItalianoButton" type="Button" parent="."]
layout_mode = 0
offset_left = 860.0
offset_top = 356.0
offset_right = 1051.0
offset_bottom = 441.0
theme_override_font_sizes/font_size = 50
text = "Italiano"

[node name="EnglishButton" type="Button" parent="."]
layout_mode = 0
offset_left = 866.0
offset_top = 536.0
offset_right = 1045.0
offset_bottom = 623.0
theme_override_font_sizes/font_size = 50
text = "English"

[node name="BackToMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 764.0
offset_top = 789.0
offset_right = 1098.0
offset_bottom = 977.0
theme_override_font_sizes/font_size = 50
text = "Torna al Men√π"

[connection signal="pressed" from="ItalianoButton" to="." method="_on_italiano_button_pressed"]
[connection signal="pressed" from="EnglishButton" to="." method="_on_english_button_pressed"]
[connection signal="pressed" from="BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
